...
  static const List<NavTab> _gatedTabs = <NavTab>[
    NavTab(
      labelKey: LocaleKeys.navMachines,
      icon: App3dIconType.machines,

      permission: P.machinesRead,
      identifier: 'nav_tab_machines',
      pageBuilder: _buildMachines,
    ),
    NavTab(
      labelKey: LocaleKeys.navTransfers,
      icon: App3dIconType.transfers,

      permission: P.transfersRead,
      identifier: 'nav_tab_transfers',
      pageBuilder: _buildTransfers,
    ),
    NavTab(
      labelKey: LocaleKeys.navMerchants,
      icon: App3dIconType.merchants,

      permission: P.merchantsRead,
      identifier: 'nav_tab_merchants',
      pageBuilder: _buildMerchants,
    ),
    NavTab(
      labelKey: LocaleKeys.navFinance,
      icon: App3dIconType.finance,

...
