...
    return Column(
      children: <Widget>[
        Padding(
          padding: const EdgeInsetsDirectional.all(AppSpacing.md),
          child: CustomSearchBar(
            controller: _searchController,
            identifier: 'machines_search_field',
            hintText: LocaleKeys.machinesSearchHint.tr(),
            hasActiveFilters: state.query.hasFilters,
            onChanged: cubit.search,
            onFilterPressed: () => _openFilters(state),
          ),
        ),
...
