...
                      ),
                      const SizedBox(height: AppSpacing.xl),
                      CustomButton(
                        title: LocaleKeys.save.tr(),
                        isLoading: isLoading,
                        onPressed: _isSubmitEnabled ? _onSubmitPressed : null,
                        identifier: 'change_password_submit_button',
                      ),
                    ],
                  ),
                ),
              ),
            ),
...
